# cto-os

./: .gitignore  CLAUDE.md  README.md  SKILL.md  install.sh  pyproject.toml
.claude/agents/: skill-reviewer.md
docs/: ARCHITECTURE.md  BACKLOG.md  DATA_REPO.md  MCP_TOOLS.md  SCRIPTS.md  SKILL_REPO.md
hooks/: pre-commit
mcp-server/: server.py
meta/: schema.md
modules/attention-operations/: README.md  SKILL.md
modules/board-comms/: README.md  SKILL.md
modules/budget/: README.md  SKILL.md
modules/business-alignment/: README.md  SKILL.md
modules/code-contribution/: README.md  SKILL.md
modules/data-backup/: README.md  SKILL.md
modules/external-network/: README.md  SKILL.md
modules/hiring/: README.md  SKILL.md
modules/managing-down/: README.md  SKILL.md
modules/managing-sideways/: README.md  SKILL.md
modules/managing-up/: README.md  SKILL.md
modules/org-comms/: README.md  SKILL.md
modules/org-design/: README.md  SKILL.md
modules/performance-development/: README.md  SKILL.md
modules/personal-os/: README.md  SKILL.md
modules/process-management/: README.md  SKILL.md
scripts/: pull_linear.py  pull_slack.py  rename_module.py  roll_up.py  scan.py  validate_deps.py  zip_data.py
templates/: CLAUDE.md  README.md  gitignore  module-README.md  module-SKILL.md
tests/: claude-review.md  conftest.py  test_mcp_files.py  test_mcp_helpers.py  test_mcp_list.py  test_mcp_path.py  test_mcp_scripts.py  test_pull_linear.py  test_pull_slack.py  test_rename_module.py  test_roll_up.py  test_scan.py  test_validate_deps.py  test_zip_data.py
(+34 files in other folders)
